Made Color.ALL immutable