@@ -20,7 +20,7 @@ public enum Color {
     RED,
     WHITE;
 
-    public static final List<Color> ALL = Arrays.asList(Color.values());
+    public static final List<Color> ALL = List.of(Color.values());
     public static final int COUNT = ALL.size();
 }
 
